--- a/app/globals.css
+++ b/app/globals.css
@@ -159,7 +159,7 @@
     letter-spacing: var(--tracking-normal);
   }
   main {
-    @apply mx-auto px-14 flex flex-col gap-8 bg-background h-full max-w-[1400px] pt-10 max-sm:px-2;
+    @apply mx-auto px-14 flex flex-col gap-8 h-full max-w-[1400px] pt-10 max-sm:px-2;
   }
   h1 {
     @apply text-3xl font-bold;
